service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp 
  type: NodePort
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 3000
    nodePort: 31111
