ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-service-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: nodeapp-service
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific
